src/tests/fixtures/field_definitions/MethodFieldMissingType.invalid.ts
/** @GQLType */
class Query {
  /** @GQLField */
  someMethodField() {
    return "Hello world!";
  }
}
